# recur-agent

./: .dockerignore  .gitignore  Dockerfile  HITL1_FEATURES.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_contract_linter.py  test_coordinator_routing.py  test_hitl1_features.py
.claude/: settings.json
config/: agent_profiles.yaml  settings.yaml
improvement_history/: 20260619_reflection.md  20260619_solution.md  20260621_debug.md  20260621_reflection.md  20260621_solution.md
src/: interaction_catalog.py  memory_catalog.py  skill_lib.py
src/agents/: base_agent.py  compiler.py  complexity_reviewer.py  contract_linter.py  debug.py  decomposer.py  memory_architect.py  prompt_engineer.py  schema_architect.py  tool_implementor.py  ui_designer.py
src/compiler_templates/: adk_coordinator_agent.py.j2  adk_llm_agent_stub.py.j2  adk_loop_agent.py.j2  adk_parallel_agent.py.j2  adk_pyproject.toml.j2  adk_root_orchestrator.py.j2  adk_sequential_agent.py.j2  adk_tool_stub.py.j2  clarify_tool.py.j2  dotignore.j2  frontend_index.html.j2  memory_appendlog.py.j2  memory_bindings.py.j2  memory_init.py.j2  memory_keyvalue.py.j2  memory_semantic.py.j2  memory_store.py.j2  serve.py.j2  ui_manifest.json.j2
src/orchestrator/: pipeline.py  state.py
src/recur_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ui/: server.py
src/ui/templates/: chat.html  dashboard.html  index.html
