[project]
name = "recur-agent"
version = "0.1.0"
description = "Recursive agentic platform engine for generating agentic workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=23.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "anyio>=4.0.0",
]

[tool.uv]
managed = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
